--- a/6_SpringBoot/sample-jpa-mysql/build.gradle
+++ b/6_SpringBoot/sample-jpa-mysql/build.gradle
@@ -35,6 +35,10 @@ dependencies {
 
 	testCompileOnly 'org.projectlombok:lombok'
 	testAnnotationProcessor 'org.projectlombok:lombok'
+
+	implementation 'io.springfox:springfox-swagger2:2.9.2'
+	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+
 }
 
 tasks.named('test') {
