--- a/6_SpringBoot/sample-jpa-mysql/build.gradle
+++ b/6_SpringBoot/sample-jpa-mysql/build.gradle
@@ -32,6 +32,8 @@ dependencies {
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
 	implementation 'io.springfox:springfox-swagger2:2.9.2'
 	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+	implementation 'com.google.guava:guava:32.1.2-jre'
+
 
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
