--- a/6_SpringBoot/sample-jpa-mysql/src/main/resources/application.properties
+++ b/6_SpringBoot/sample-jpa-mysql/src/main/resources/application.properties
@@ -4,8 +4,9 @@ server.port=8111
 spring.datasource.url=jdbc:mysql://localhost:3306/hd_jpa_mysql?useUnicode=true&characterEncoding=UTF-8&serverTimezone=Asia/Seoul
 spring.datasource.username=root
 spring.datasource.password=1234
-spring.data.mongodb.uri=mongodb://localhost:27017/shopdb
+#spring.data.mongodb.uri=mongodb://localhost:27017/shopdb
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=create
